framec_tests/language_specific/csharp/v3_outline/negative/state_missing_brace.frm
@target csharp

system S {
    machine:
        $A 
}

